fixed layout issues with query selector

--- a/styles.css
+++ b/styles.css
@@ -65,7 +65,7 @@ strong { font-weight: 900; }
    ================= */
    
 .intro {
-    background-image: url(images/dark-ribs.jpg);
+    background-image: url(assets/dark-ribs.jpg);
     background-size: cover;
     background-color: #404040;
     background-position: center;
@@ -86,11 +86,20 @@ strong { font-weight: 900; }
 }
 
 
+
+.intro > *,
+.main-content > * {
+    max-width: 400px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+
 /* =================
    media queries 
    ================= */
    
-@media (min-width: 500px) {
+@media (min-width: 600px) {
     body {
         font-size: 1.125rem;
         display: flex;
